--- a/stores.html
+++ b/stores.html
@@ -28,16 +28,16 @@
                     <p>CLOTHING STORES</p>
                     <ul>
                         <li>
-                            <img src="images/zara.images/zara-logo.jpg" width="400" height="400" alt="Makro logo"/>
-                            <a href="zara.html">ZARA</a>
+                            <a href="zara.html"><img src="images/zara.images/zara-logo.jpg" width="400" height="400" alt="Makro logo"/></a>
+                            <p>ZARA</p>
                         </li>
                         <li>
-                            <img src="images/h&m.images/h&m-logo.jpg" width="400" height="400" alt="Game logo"/>
-                            <a href="h&m.html">H&M</a>
+                            <a href="h&m.html"><img src="images/h&m.images/h&m-logo.jpg" width="400" height="400" alt="Game logo"/></a>
+                            <p>H&M</p>
                         </li>
                         <li>
-                            <img src="images/woolworths.images/Woolworths-logo.jpg" width="400" height="400" alt="Checkers Hyper Logo"/>
-                            <a href="woolworths.html">WOOLWORTHS</a>
+                            <a href="woolworths.html"><img src="images/woolworths.images/Woolworths-logo.jpg" width="400" height="400" alt="Checkers Hyper Logo"/></a>
+                            <p>WOOLWORTHS</p>
                         </li>
                     </ul>
                 </div>
@@ -48,16 +48,16 @@
                     <p>SUPERMARKETS</p>
                     <ul>
                         <li>
-                            <img src="images/makro.images/makro-logo1.jpg" width="400" height="400" alt="Makro logo"/>
-                            <a href="makro.html">MAKRO</a>
+                            <a href="makro.html"><img src="images/makro.images/makro-logo1.jpg" width="400" height="400" alt="Makro logo"/></a>
+                            <p>MAKRO</p>
                         </li>
                         <li>
-                            <img src="images/game.images/game-logo1.jpg" width="400" height="400" alt="Game logo"/>
-                            <a href="game.html">GAME</a>
+                            <a href="game.html"><img src="images/game.images/game-logo1.jpg" width="400" height="400" alt="Game logo"/></a>
+                            <p>GAME</p>
                         </li>
                         <li>
-                            <img src="images/checkers.images/checkers-logo.jpg" width="400" height="400" alt="Checkers Hyper Logo"/>
-                            <a href="checkers.html">CHECKERS HYPER</a>
+                            <a href="checkers.html"><img src="images/checkers.images/checkers-logo.jpg" width="400" height="400" alt="Checkers Hyper Logo"/></a>
+                            <p>CHECKERS HYPER</p>
                         </li>
                     </ul>
                 </div>
@@ -68,12 +68,12 @@
                     <p>Restaurant & Cafes</p>
                     <ul>
                         <li>
-                            <img src="images/mugg&bean.images/mugg&bean-logo.png" width="400" height="400" alt="Mugg&Bean"/>
-                            <a href="mugg&bean.html">Mugg&Bean</a>
+                            <a href="mugg&bean.html"><img src="images/mugg&bean.images/mugg&bean-logo.png" width="400" height="400" alt="Mugg&Bean Logo"/></a>
+                            <p>Mugg&Bean</p>
                         </li>
                         <li>
-                            <img src="images/tashas.images/tashas-logo2.jpg" width="400" height="400" alt="Tashas Logo"/>
-                            <a href="tashas.html">TASHAS</a>
+                            <a href="tashas.html"><img src="images/tashas.images/tashas-logo2.jpg" width="400" height="400" alt="Tashas Logo"/></a>
+                            <p>TASHAS</p>
                         </li>
                     </ul>
                 </div>
