--- a/movies.html
+++ b/movies.html
@@ -25,7 +25,7 @@
                     <ul>
                         <li>
                             <div class="movie">
-                                <a href="avengers.html"><img src="images/movies.images/avengers.jpg"></a>
+                                <a href="avengers.html"><img src="images/movies.images/avengers.jpg"/></a>
                             </div>
                             <div class="movie-info">
                                 <p>
@@ -46,7 +46,7 @@
                         <hr>
                         <li>
                             <div class="movie">
-                                <a href="justice_league.html"><img src="images/movies.images/justice-league.jpg"></a>
+                                <a href="justice_league.html"><img src="images/movies.images/justice-league.jpg"/></a>
                             </div>
                             <div class="movie-info">
                                 <p>
@@ -68,7 +68,7 @@
                         <hr>
                         <li>
                             <div class="movie">
-                                <a href="johnwick.html"><img src="images/movies.images/john-wick3.jpg"></a>
+                                <a href="johnwick.html"><img src="images/movies.images/john-wick3.jpg"/></a>
                             </div>
                             <div class="movie-info">
                                 <p>
@@ -89,7 +89,7 @@
                         <hr>
                         <li>
                             <div class="movie">
-                                <a href="matrix.html"><img src="images/movies.images/the-matrix.jpg"></a>
+                                <a href="matrix.html"><img src="images/movies.images/the-matrix.jpg"/></a>
                             </div>
                             <div class="movie-info">
                                 <p>
