--- a/movies.html
+++ b/movies.html
@@ -68,7 +68,7 @@
                         <hr>
                         <li>
                             <div class="movie">
-                                <a href="johnwick.html"><img src="images/movies.images/john-wick3.jpg"/></a>
+                                <a href="johnwick.html"><img src="images/movies.images/john-wick3.jpg"></a>
                             </div>
                             <div class="movie-info">
                                 <p>
