--- a/movies.html
+++ b/movies.html
@@ -25,7 +25,7 @@
                     <ul>
                         <li>
                             <div class="movie">
-                                <a href="avengers.html"><img src="images/movies.images/avengers.jpg"/></a>
+                                <a href="avengers.html"><img src="images/movies.images/avengers.jpg" alt="avengers"/></a>
                             </div>
                             <div class="movie-info">
                                 <p>
